--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=870" />
-    <title>Vite + React + TS</title>
+    <title>Tables App</title>
   </head>
   <body>
     <div id="root"></div>
